# usb_hid_tool

./: .gitignore  206_序列号参数.md  CMakeLists.txt  README.md  air_race_hid_tool.pro
src/: main.cpp
src/core/: race_command.cpp  race_command.h  race_packet.cpp  race_packet.h
src/service/: race_service.cpp  race_service.h  serial_number_service.cpp  serial_number_service.h
src/transport/: hid_transport.cpp  hid_transport.h
src/ui/: app_paths.cpp  app_paths.h  main_window.cpp  main_window.h  sn_mode_settings.cpp  sn_mode_settings.h  sn_mode_settings_dialog.cpp  sn_mode_settings_dialog.h
